fix filter alignment based on first item

--- a/assets-src/styles/sass/50-core-components/_hero.scss
+++ b/assets-src/styles/sass/50-core-components/_hero.scss
@@ -113,7 +113,7 @@
 
 	> div {
 
-		align-items: flex-end;
+		align-items: flex-start;
 
 	}
 
